# strydom-holiday-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  database.py  pyproject.toml  requirements-dev.txt
.cursor/rules/: project-standards.mdc
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: holiday.css
docs/architecture/: index.rst
docs/decisions/: 0001-record-architecture-decisions.rst  0002-store-plans-in-sqlite.rst  index.rst  template.rst
docs/diagrams/: holiday-planning.md
docs/implementation/: index.rst
docs/reports/: accessibility.rst  coverage.rst  index.rst  mutation.rst  security.rst  tests.rst
docs/requirements/: index.rst
docs/specs/: index.rst
docs/tests/: index.rst
docs/usability/: checklist.md
static/css/: style.css
static/js/: app.js  extended-legs.js  glance-timeline.js
templates/: base.html  day_trip.html  extended.html  holiday_planning.html  index.html  long_weekend.html  search.html  weekend.html
templates/partials/: accommodation_section.html  checklist_form_anchors.html  checklist_reminder.html  glance_trips.html  holiday_type_section.html  planner_calendar_section.html  things_to_do_section.html  transport_checklist_editor.html  transport_section.html  travelers_section.html  trip_type_select.html
tests/: conftest.py  test_app.py  test_app_routes.py  test_database.py  test_smoke.py  test_timeline.py
trip_planner/: __init__.py
trip_planner/services/: __init__.py  timeline.py
